pad: unlock before freeing the cache to avoid deadlock

https://bugzilla.gnome.org/show_bug.cgi?id=648199